# detail_page_crawler

seed_collector/: README.md  pyproject.toml  setup.py
seed_collector/seed_collector/: canonicalize.py  category_parser.py  cli.py  extract_links.py  fetcher.py  jsonl_writer.py  models.py  normalize_url.py  rate_limit.py  robots.py
seed_collector/seed_collector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
seed_collector/tests/: test_canonicalize.py  test_extract_links.py  test_normalize_url.py
