[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seed-collector"
version = "0.1.0"
description = "Seed URL collector for e-commerce category pages"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Prompt Shopping"}]

dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[project.scripts]
seed-collector = "seed_collector.cli:main"

[tool.pytest.ini_options]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["seed_collector*"]
